--- a/react-app/src/components/PostIndex/PostIndex.css
+++ b/react-app/src/components/PostIndex/PostIndex.css
@@ -71,6 +71,7 @@
     /* -webkit-text-stroke: 1px black; */
     transition: color .2s ease;
     letter-spacing: 0.5px;
+    font-size: 44px;
 }
 
 .featured-title:hover {
@@ -154,12 +155,10 @@
 .more_text {
     font-weight: 600;
     margin: 0 15px;
-    font-size: 24px;
+    font-size: 22px;
     color: #757c83;
     width: 400px;
     text-align: center;
-    font-family: "Fjalla One", sans-serif;
-    letter-spacing: 0.5px;
 }
 
 .line {
@@ -211,6 +210,7 @@
     transition: color .2s ease;
     font-family: "Fjalla One", sans-serif;
     letter-spacing: 0.5px;
+    text-transform: capitalize;
 }
 
 .one-post-title-link {
