--- a/react-app/src/components/SinglePost/SinglePost.css
+++ b/react-app/src/components/SinglePost/SinglePost.css
@@ -6,7 +6,7 @@
     background-color: rgb(255, 255, 255);
     border: 1px solid #d6d6d7;
     width: 1400px;
-    padding-bottom: 90px;
+    padding-bottom: 80px;
 }
 
 .single-post-content-container {
@@ -22,7 +22,7 @@
 
 .single-post-title {
     padding: 20px 40px;
-    padding-top: 60px;
+    padding-top: 100px;
     margin-top: 30px;
     margin-bottom: 24px;
     word-break: break-word;
@@ -36,7 +36,7 @@
     height: 710px;
     object-fit: contain;
     background-color: black;
-    border: 1px solid #21BFE1;
+    border-radius: 10px;
 }
 
 .single-post-subheader {
