--- a/react-app/src/components/Comments/Comments.css
+++ b/react-app/src/components/Comments/Comments.css
@@ -91,6 +91,49 @@
     border-radius: 10px;
 }
 
+.update-img-input {
+    text-align: center;
+    height: 40px;
+    width: 450px;
+    border-radius: 10px;
+    border: 1px solid #d6d6d7;
+    transition: all .2s ease-out;
+    padding: 0 10px;
+}
+
+.update-img-input:focus {
+    outline: none !important;
+    border: 1px solid #21BFE1;
+    box-shadow: 0 0 10px #21bee1a5;
+}
+
+.update-img-button {
+    margin-top: 30px;
+    margin-right: 5px;
+    font-weight: 600;
+    font-size: 16px;
+    height: 40px;
+    width: 160px;
+    text-transform: uppercase;
+    background-color: #21BFE1;
+    color: white;
+    padding: 10px;
+    border: none;
+    cursor: pointer;
+    box-shadow: none;
+    transition: box-shadow .2s ease-out;
+}
+
+.update-img-button:hover {
+    box-shadow: 0 0 15px #21BFE1;
+}
+
+.aws-loading4 {
+    position: absolute;
+    top: 170px;
+    left: 230px;
+}
+
 .update-comment-textarea {
     padding-top: 10px;
     padding-left: 10px;
@@ -133,8 +176,8 @@
 
 .comment-form-textarea:focus {
     outline: none !important;
-    border: 1px solid #21BFE1;
-    box-shadow: 0 0 10px #21bee1a5;
+    border: 1px solid #7F5AE5;
+    box-shadow: 0 0 10px #7F5AE5;
 }
 
 .comment-form-button-wrapper {
