--- a/react-app/src/components/Chat/Chat.css
+++ b/react-app/src/components/Chat/Chat.css
@@ -294,3 +294,45 @@
     border-top: 1px solid #d6d6d7;
     border-bottom: 1px solid #d6d6d7;
 }
+
+@media (max-width: 1920px) {
+    .chat-page {
+        height: 850px;
+    }
+
+    .chat-right-content {
+        height: 695px;
+    }
+
+    .modal.chat-show {
+        bottom: 12vh;
+    }
+}
+
+@media (max-width: 1280px) {
+    .chat-page {
+        height: 450px;
+    }
+
+    .chat-right-content {
+        height: 295px;
+    }
+
+    .modal.chat-show {
+        bottom: 14vh;
+    }
+}
+
+@media only screen and (max-device-width: 570px){
+    .chat-page {
+        height: 950px;
+    }
+
+    .chat-right-content {
+        height: 795px;
+    }
+
+    .modal.chat-show {
+        bottom: 24vh;
+    }
+}
