--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -161,3 +161,10 @@
         min-width: 150px;
     }
 }
+
+@media only screen and (max-device-width: 570px) {
+    .nav-links {
+        justify-content: right;
+        margin-right: 20px;
+    }
+}
