--- a/react-app/src/components/auth/SignupForm.css
+++ b/react-app/src/components/auth/SignupForm.css
@@ -54,7 +54,7 @@
 
 .aws-div4 {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     margin-top: -15px;
     margin-bottom: 0px;
@@ -69,6 +69,8 @@
     height: 20px;
     padding-bottom: 30px;
     position: relative;
+    right: 57px;
+    top: 10px;
 }
 
 .aws-loading-text {
