--- a/react-app/src/components/PostIndex/PostIndex.css
+++ b/react-app/src/components/PostIndex/PostIndex.css
@@ -27,7 +27,21 @@
     width: 100%;
     height: 100%;
     height: 525px;
-    filter: brightness(.75);
+    /* filter: brightness(.75); */
+}
+
+.img-gradient {
+    position:relative;
+    height: 98.5%;
+}
+
+
+.img-gradient::after {
+    content: '';
+    position: absolute;
+    left: 0; top: 0;
+    width: 100%; height: 100%;
+    background: linear-gradient(to bottom, transparent 30%,rgba(0, 0, 0, 0.839) 100%);
 }
 
 .side-featured-img {
@@ -35,7 +49,7 @@
     width: 100%;
     height: 100%;
     height: 262.5px;
-    filter: brightness(.75);
+    /* filter: brightness(.75); */
 }
 
 .bottom {
@@ -54,24 +68,25 @@
 
 .featured-user {
     font-size: 20px;
-    text-shadow: 3px 3px 3px black;
+    /* text-shadow: 1px 1px 1px black; */
     /* -webkit-text-stroke: 0.75px black; */
     font-weight: 700;
     display: flex;
     align-items: center;
     padding-bottom: 2.5px;
-    font-family: "Fjalla One", sans-serif;
+    /* font-family: "Fjalla One", sans-serif; */
 }
 
 .featured-title {
     font-family: "Fjalla One", sans-serif;
     font-weight: 700;
     text-transform: capitalize;
-    text-shadow: 3px 3px 3px black;
+    /* text-shadow: 3px 3px 3px black; */
     /* -webkit-text-stroke: 1px black; */
     transition: color .2s ease;
     letter-spacing: 0.5px;
     font-size: 44px;
+    margin-right: 180px;
 }
 
 .featured-title:hover {
@@ -90,10 +105,11 @@
 .side-featured-user {
     font-weight: 700;
     font-size: 20px;
-    text-shadow: 2px 2px 2px black;
+    /* text-shadow: 1px 1px 1px black; */
     /* -webkit-text-stroke: 0.75px black; */
     display: flex;
     align-items: center;
+    color: red;
 }
 
 .side-featured-title {
@@ -103,9 +119,10 @@
     font-size: 30px;
     letter-spacing: 0.5px;
     text-transform: capitalize;
-    text-shadow: 3px 3px 3px black;
+    /* text-shadow: 3px 3px 3px black; */
     /* -webkit-text-stroke: 0.75px black; */
     transition: color .2s ease;
+    margin-right: 110px;
 }
 
 .side-featured-title:hover {
@@ -280,26 +297,26 @@
 .featured-likes {
     position: absolute;
     font-size: 40px;
-    top: 30px;
+    bottom: 30px;
     right: 30px;
     cursor: pointer;
     z-index: 5;
     font-weight: bold;
     color: white;
-    text-shadow: 3px 3px 3px black;
+    /* text-shadow: 3px 3px 3px black; */
     transition: color .2s ease;
 }
 
 .side-featured-likes {
     position: absolute;
     font-size: 24px;
-    top: 15px;
+    bottom: 15px;
     right: 15px;
     cursor: pointer;
     z-index: 5;
     font-weight: bold;
     color: white;
-    text-shadow: 3px 3px 3px black;
+    /* text-shadow: 3px 3px 3px black; */
     /* -webkit-text-stroke: 0.25px black; */
     transition: color .2s ease;
 }
