--- a/react-app/src/components/SinglePost/SinglePost.css
+++ b/react-app/src/components/SinglePost/SinglePost.css
@@ -6,7 +6,7 @@
     background-color: rgb(255, 255, 255);
     border: 1px solid #d6d6d7;
     width: 1400px;
-    padding-bottom: 80px;
+    padding-bottom: 90px;
 }
 
 .single-post-content-container {
@@ -23,13 +23,15 @@
 .single-post-title {
     padding: 20px 40px;
     padding-top: 100px;
-    margin-top: 30px;
+    margin-top: 0px;
     margin-bottom: 24px;
     word-break: break-word;
-    font-size: 40px;
+    font-size: 44px;
     text-transform: capitalize;
-    font-family: "Fjalla One", sans-serif;
-    letter-spacing: 0.5px;
+    font-family: "Oswald", sans-serif;
+    letter-spacing: -0.5px;
+    font-weight: 600;
+    line-height: 50px;
 }
 
 .single-post-img {
