extra sign up validations

--- a/react-app/src/components/PostIndex/PostIndex.css
+++ b/react-app/src/components/PostIndex/PostIndex.css
@@ -46,6 +46,7 @@
 
 .side-featured-img {
     object-fit: cover;
+    object-position: top;
     width: 100%;
     height: 100%;
     height: 262.5px;
