--- a/react-app/src/components/SearchBar/SearchBarChat.css
+++ b/react-app/src/components/SearchBar/SearchBarChat.css
@@ -16,7 +16,7 @@
     transition: all .2s ease-out;
     padding: 0 15px;
     font-size: 16px;
-    margin-left: 10px;
+    /* margin-left: 20px; */
 }
 
 .search-input-chat:focus {
