--- a/react-app/src/components/SearchBar/SearchBarChat.css
+++ b/react-app/src/components/SearchBar/SearchBarChat.css
@@ -1,9 +1,11 @@
 .search-bar-chat {
-    position: relative;
+    position: fixed;
     border-bottom: 1px solid #d6d6d7;
     padding-bottom: 20px;
     z-index: 6;
     text-align: center;
+    background-color: white;
+    width: 396px;
 }
 
 .search-input-chat {
