--- a/react-app/src/components/PostIndex/PostIndex.css
+++ b/react-app/src/components/PostIndex/PostIndex.css
@@ -403,7 +403,7 @@
 }
 
 .confirm-delete-button-no:hover {
-    box-shadow: 0 0 15px #21bee171;
+    box-shadow: 0 0 15px #21BFE1;
 }
 
 .follow-more-users {
