--- a/react-app/src/components/auth/LoginForm.css
+++ b/react-app/src/components/auth/LoginForm.css
@@ -3,7 +3,6 @@
     flex-direction: column;
     align-items: center;
     padding: 40px 60px 20px 60px;
-
     border: 3px solid #21BFE1;
     border-radius: 10px;
 }
@@ -65,7 +64,7 @@
 }
 
 .login-button:hover {
-    box-shadow: 0 0 15px #21bee171;
+    box-shadow: 0 0 15px #21BFE1;
 }
 
 .login-button2 {
